style.css
/* ... */
footer strong:hover {
  color: var(--accent);
}

footer .year-element {
  color: var(--text);
  font-weight: 600;
}

.floater1 {
  animation: floater1 3s ease-in-out infinite;
}

.floater2 {
  animation: floater2 3s ease-in-out infinite;
}

@keyframes floater1 {
  0% {
    transform: translateY(-3px);
  }
  50% {
    transform: translateY(3px);
  }
  100% {
    transform: translateY(-3px);
  }
}

@keyframes floater2 {
  0% {
    transform: translateY(3px);
  }
  50% {
    transform: translateY(-3px);
  }
  100% {
    transform: translateY(3px);
  }
}

/* ─── RESPONSIVE ───────────────────────────────────── */
@media (max-width: 768px) {
  .nav-links {
    display: none;
  }

  .container{
    display: flex;
    justify-content: center;
  }

  .hero-inner,
  .about-grid,
  .contact-grid {
    grid-template-columns: 1fr;
    width: fit-content;
    gap: 32px;
  }
  .hero-avatar {
    display: none;
  }
  .nav-links {
    gap: 16px;
  }

  .hero-tagline {
    width: clamp(300px, 80vw, 460px);
  }

  #home {
    align-items: start;
    min-height: 50vh;
  }
}

